<?xml version="1.0"?>
<package format="2">
  <name>dwa_planner</name>
  <version>0.0.0</version>
  <description>The dwa_planner package</description>
  <maintainer email="th991023@naver.com">mobile robotics</maintainer>

  <license>license</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>eigen</depend>
  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>

  <export>
  </export>

</package>
